# agent-term

./: .gitignore  Cargo.toml  README.md
schemas/: doctor.schema.json  grep.schema.json  list-entry.schema.json  slice.schema.json  summary.schema.json  tail.schema.json  wait.schema.json
skill-data/core/: SKILL.md
skill-data/core/references/: commands.md  json-schemas.md  safety.md  scenarios.md  troubleshooting.md
skills/agent-term/: SKILL.md
skills/agent-terminal/: SKILL.md
src/: cli.rs  client.rs  daemon.rs  doctor.rs  grep.rs  ids.rs  ipc.rs  main.rs  meta.rs  pty.rs  skills.rs  slice.rs  state.rs  summary.rs  tail.rs  wait.rs
