[package]
name = "agent-term"
version = "1.0.0"
edition = "2021"
description = "Detached, observable subprocess runner for AI agents"
license = "Apache-2.0"
repository = "https://github.com/TendonT52/agent-term"
homepage = "https://github.com/TendonT52/agent-term"
readme = "README.md"
keywords = ["cli", "agent", "subprocess", "logs", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agent-term"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
portable-pty = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "process"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
